# Astroimg-Library

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  demo.py  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
astroimg/: __init__.py  crossmatch.py  detection.py  download.py  kernels.py  photometry.py  visualization.py
tests/: conftest.py  test_detection.py  test_kernels.py  test_photometry.py
