[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroimg"
version = "0.1.0"
description = "Astronomical image analysis: source detection, aperture photometry and Gaia crossmatching from FITS images"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Paco", email = "tu@email.com" }
]
keywords = ["astronomy", "fits", "image-processing", "source-detection", "photometry", "gaia"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "astropy>=5.3",
  "astroquery>=0.4.6",
  "pandas>=2.0",
  "photutils>=1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
classification = [
  "torch>=2.0",
  "torchvision>=0.15",
  "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/tuusuario/astroimg"
Repository = "https://github.com/tuusuario/astroimg"
Documentation = "https://github.com/tuusuario/astroimg#readme"
"Bug Tracker" = "https://github.com/tuusuario/astroimg/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["astroimg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
